@@ -1,61 +1,71 @@
-import javax.xml.crypto.Data;
-import java.security.Provider;
 import java.util.ArrayList;
-import java.util.Scanner;
 
 public class Main {
 
-    //  Variável estática global para armazenar contas criadas em tempo de execução.
     public static ArrayList<Conta> listaContas = new ArrayList<>();
 
     public static void main(String[] args) {
 
-        //  Declaração de variáveis e listas auxiliares.
         int aux = 0;
         Conta contaCorrente;
         Conta contaInvestimentos;
         Conta contaComercial;
 
         try {
-            for(Cliente cliente : DataLists.getListaClientes()) { // Criação de contas para clientes, Associação de numero de conta.
+            for (Cliente cliente : DataLists.getListaClientes()) {
                 contaCorrente = ServiceConta.criarContaCliente(cliente);
                 cliente.setNumeroConta(new int[]{contaCorrente.getNumeroConta(), 0, 0});
                 listaContas.add(contaCorrente);
+                System.out.println("Conta criada para cliente: " + cliente.getNome() + " - Conta: " + contaCorrente.getNumeroConta());
             }
-            for(Funcionario funcionario : DataLists.getListaFuncionarios()) { // Criação de contas para funcionários, Associação de numero de conta.
-
-                contaCorrente = ServiceConta.criarContasFuncionario(funcionario).getFirst();
-                contaInvestimentos = ServiceConta.criarContasFuncionario(funcionario).getLast();
+            for (Funcionario funcionario : DataLists.getListaFuncionarios()) {
+                ArrayList<Conta> contasFuncionario = ServiceConta.criarContasFuncionario(funcionario);
+                contaCorrente = contasFuncionario.get(0);
+                contaInvestimentos = contasFuncionario.get(1);
                 funcionario.setNumeroConta(new int[]{contaCorrente.getNumeroConta(), contaInvestimentos.getNumeroConta(), 0});
                 listaContas.add(contaCorrente);
                 listaContas.add(contaInvestimentos);
+                System.out.println("Contas criadas para funcionário: " + funcionario.getNome() + " - Conta Corrente: " + contaCorrente.getNumeroConta() + ", Conta Investimentos: " + contaInvestimentos.getNumeroConta());
             }
-            for(Loja loja : DataLists.getListaLojas()) { // Criação de contas para lojas, Associação de numero de conta.
+            for (Loja loja : DataLists.getListaLojas()) {
                 contaComercial = ServiceConta.criarContaLoja(loja);
-                loja.setFuncionarios(DataLists.getListaFuncionarios().subList(aux, aux + 2)); // Associação de funcionários a loja usando sublistas.
+                loja.setFuncionarios(DataLists.getListaFuncionarios().subList(aux, aux + 2));
                 aux += 2;
                 loja.setNumeroConta(new int[]{0, 0, contaComercial.getNumeroConta()});
                 listaContas.add(contaComercial);
+                System.out.println("Conta criada para loja: " + loja.getNome() + " - Conta Comercial: " + contaComercial.getNumeroConta());
             }
         } catch (Exception e) {
             System.out.println("Erro ao criar contas.");
+            e.printStackTrace();
         }
 
-        // Transferências de valores aleatórios entre contas de clientes e lojas.
-        int i = 0;
+        // Criar e iniciar uma Thread para cada cliente
+        ArrayList<Thread> threads = new ArrayList<>();
         for (Cliente cliente : DataLists.getListaClientes()) {
-            ServicePagamento.realizarTransferencia(ServiceConta.buscarConta(listaContas, cliente.getNumeroConta()[0]), ServiceConta.buscarConta(listaContas, 27), Util.gerarValorAleatorio(200, 500));
-            ServicePagamento.realizarTransferencia(ServiceConta.buscarConta(listaContas, cliente.getNumeroConta()[0]), ServiceConta.buscarConta(listaContas, 28), Util.gerarValorAleatorio(200, 500));
+            Thread thread = new Thread(new ClienteProcessor(cliente, listaContas));
+            threads.add(thread);
+            thread.start();
         }
 
+        // Aguardar todas as Threads terminarem
+        for (Thread thread : threads) {
+            try {
+                thread.join();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
 
         // Método para printar contas na tela:
-
         for (Conta conta : listaContas) {
             System.out.println(conta.toString());
         }
 
-
+        for (Loja loja : DataLists.getListaLojas()) {
+            for (Funcionario funcionario : loja.getFuncionarios()) {
+                System.out.println(funcionario.toString());
+            }
+        }
     }
-
 }
